// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insight-engine baseline (sales + metas, no inventory) > activates meta_gap_temporal but keeps inventory_stock silent 1`] = `
{
  "datasetShape": {
    "inventory": 0,
    "metas": 2340,
    "sales": 94838,
  },
  "engineStatus": {
    "candidatesSelected": 24,
    "candidatesTotal": 313,
    "origins": {
      "cross_engine": 2,
      "executive_compression": 0,
      "legacy_render_adapter": 0,
      "motor1_legacy": 0,
      "motor2_registry_loop": 110,
      "special_builder": 201,
      "unknown": 0,
    },
  },
  "poolAfterFilter": {
    "passRate": 0.75,
    "total": 18,
  },
  "poolReturnedByEngine": {
    "byInsightType": {
      "change": 1,
      "cliente_dormido": 1,
      "cliente_perdido": 1,
      "co_decline": 1,
      "contribution": 1,
      "cross_delta": 2,
      "meta_gap": 10,
      "meta_gap_temporal": 2,
      "migration": 2,
      "outlier": 1,
      "product_dead": 1,
      "trend": 1,
    },
    "total": 24,
  },
  "specialBuilderOutputs": {
    "change_point": 68,
    "cliente_dormido": 1,
    "cliente_perdido": 1,
    "co_decline": 1,
    "correlation": 0,
    "cross_delta": 75,
    "inventory_stock": 0,
    "meta_gap_aggregate_vendedor": 0,
    "meta_gap_combo": 42,
    "meta_gap_temporal": 3,
    "migration": 1,
    "outlier_builder": 4,
    "product_dead": 1,
    "steady_share": 4,
  },
}
`;

exports[`insight-engine baseline (sales only, no metas no inventory) > runs cleanly and inventory/meta builders emit 0 candidates 1`] = `
{
  "datasetShape": {
    "inventory": 0,
    "metas": 0,
    "sales": 94838,
  },
  "engineStatus": {
    "candidatesSelected": 14,
    "candidatesTotal": 268,
    "origins": {
      "cross_engine": 2,
      "executive_compression": 0,
      "legacy_render_adapter": 0,
      "motor1_legacy": 0,
      "motor2_registry_loop": 110,
      "special_builder": 156,
      "unknown": 0,
    },
  },
  "poolAfterFilter": {
    "passRate": 0.643,
    "total": 9,
  },
  "poolReturnedByEngine": {
    "byInsightType": {
      "change": 1,
      "cliente_dormido": 1,
      "cliente_perdido": 1,
      "co_decline": 1,
      "contribution": 2,
      "cross_delta": 2,
      "migration": 2,
      "outlier": 1,
      "product_dead": 1,
      "trend": 2,
    },
    "total": 14,
  },
  "specialBuilderOutputs": {
    "change_point": 68,
    "cliente_dormido": 1,
    "cliente_perdido": 1,
    "co_decline": 1,
    "correlation": 0,
    "cross_delta": 75,
    "inventory_stock": 0,
    "meta_gap_aggregate_vendedor": 0,
    "meta_gap_combo": 0,
    "meta_gap_temporal": 0,
    "migration": 1,
    "outlier_builder": 4,
    "product_dead": 1,
    "steady_share": 4,
  },
}
`;

exports[`insight-engine golden master (demo dataset, UDS) > produces stable structural output for demo dataset 1`] = `
{
  "rows": [
    {
      "dimensionId": "cliente",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 819,
      "insightTypeId": "cliente_perdido",
      "member": "Tienda El Progreso",
      "metricId": "dias_sin_compra",
      "rank": 1,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "ALTA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "cliente",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 1633,
      "insightTypeId": "cliente_dormido",
      "member": "Supermercado López",
      "metricId": "dias_sin_compra",
      "rank": 2,
      "root_problem_key": null,
      "scoreRounded": 0.75,
      "severity": "MEDIA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 35648,
      "insightTypeId": "meta_gap_temporal",
      "member": "Carlos Ramírez",
      "metricId": "cumplimiento_meta",
      "rank": 3,
      "root_problem_key": null,
      "scoreRounded": 0.2301,
      "severity": "BAJA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 17123,
      "insightTypeId": "meta_gap_temporal",
      "member": "Luis Hernández",
      "metricId": "cumplimiento_meta",
      "rank": 4,
      "root_problem_key": null,
      "scoreRounded": 0.0954,
      "severity": "BAJA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "supervisor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Roberto Méndez",
      "metricId": "cumplimiento_meta",
      "rank": 5,
      "root_problem_key": null,
      "scoreRounded": 0.7089,
      "severity": "MEDIA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Carlos Ramírez",
      "metricId": "cumplimiento_meta",
      "rank": 6,
      "root_problem_key": null,
      "scoreRounded": 0.8772,
      "severity": "MEDIA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Miguel Ángel Díaz",
      "metricId": "cumplimiento_meta",
      "rank": 7,
      "root_problem_key": null,
      "scoreRounded": 0.9296,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 7567,
      "insightTypeId": "product_dead",
      "member": "Cacahuates 100g",
      "metricId": "venta",
      "rank": 8,
      "root_problem_key": null,
      "scoreRounded": 0.6,
      "severity": "MEDIA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "producto",
      "direction": "neutral",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 7836,
      "insightTypeId": "stock_excess",
      "member": "Cacahuates 100g",
      "metricId": "inventario",
      "rank": 9,
      "root_problem_key": null,
      "scoreRounded": 0.7,
      "severity": "MEDIA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 7567,
      "insightTypeId": "co_decline",
      "member": "Palomitas 80g",
      "metricId": "venta",
      "rank": 10,
      "root_problem_key": null,
      "scoreRounded": 0.1513,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 12003,
      "insightTypeId": "stock_risk",
      "member": "Té Helado 500ml",
      "metricId": "inventario",
      "rank": 11,
      "root_problem_key": null,
      "scoreRounded": 0.4,
      "severity": "BAJA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "categoria",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Lácteos",
      "metricId": "cumplimiento_meta",
      "rank": 12,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "MEDIA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "categoria",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Limpieza",
      "metricId": "cumplimiento_meta",
      "rank": 13,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "MEDIA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "categoria",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Refrescos",
      "metricId": "cumplimiento_meta",
      "rank": 14,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "MEDIA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.54,
      "impactoValorRounded": 346,
      "insightTypeId": "migration",
      "member": "Super Económico",
      "metricId": "venta",
      "rank": 15,
      "root_problem_key": null,
      "scoreRounded": 0.244,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Roberto Cruz",
      "metricId": "cumplimiento_meta",
      "rank": 16,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "BAJA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.69,
      "impactoValorRounded": 46,
      "insightTypeId": "migration",
      "member": "Tienda El Carmen",
      "metricId": "num_transacciones",
      "rank": 17,
      "root_problem_key": null,
      "scoreRounded": 0.2659,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "categoria",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Snacks",
      "metricId": "cumplimiento_meta",
      "rank": 18,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "BAJA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "departamento",
      "direction": "neutral",
      "hasAction": false,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "cross_delta",
      "member": "Santa Ana",
      "metricId": "venta",
      "rank": 19,
      "root_problem_key": null,
      "scoreRounded": 0.3807,
      "severity": "BAJA",
      "time_scope": "unknown",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 133.59,
      "impactoValorRounded": 346,
      "insightTypeId": "contribution",
      "member": "Walmart Occidente",
      "metricId": "venta",
      "rank": 20,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
  ],
  "summary": {
    "datasetSize": {
      "inventory": 20,
      "metas": 2340,
      "sales": 94838,
    },
    "engineStatus": {
      "candidatesSelected": 25,
      "candidatesTotal": 294,
      "detectorsEmitted": {
        "change_point": 68,
        "correlation": 0,
        "meta_gap_temporal": 2,
        "motor1": 112,
        "outlier_builder": 4,
        "steady_share": 4,
        "z9_hydration": 29,
      },
      "origins": {
        "cross_engine": 2,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 104,
        "special_builder": 188,
        "unknown": 0,
      },
      "rankerAudit": {
        "portfolioPreview": [
          {
            "currentRank": 1,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
            "portfolioRank": 1,
            "portfolioScore": 0.626,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 2,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Luis Hernández",
            "portfolioRank": 9,
            "portfolioScore": 0.4,
            "reasons": [
              "economic_impact",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 3,
            "id": "special_builder:meta_gap:supervisor:cumplimiento_meta:Roberto Méndez",
            "portfolioRank": 13,
            "portfolioScore": 0.349,
            "reasons": [
              "economic_impact",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 4,
            "id": "special_builder:meta_gap:vendedor:cumplimiento_meta:Carlos Ramírez",
            "portfolioRank": 18,
            "portfolioScore": 0.328,
            "reasons": [
              "economic_impact",
              "high_confidence",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 5,
            "id": "special_builder:cliente_perdido:cliente:dias_sin_compra:Tienda El Progreso",
            "portfolioRank": 2,
            "portfolioScore": 0.502,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "high_confidence",
              "actionable",
              "causal_context",
            ],
          },
        ],
        "protectedCount": 23,
        "regularCap": 6,
        "regularCount": 157,
        "regularSelected": 6,
        "selectedByOrigin": {
          "cross_engine": 0,
          "executive_compression": 0,
          "legacy_render_adapter": 0,
          "motor1_legacy": 0,
          "motor2_registry_loop": 6,
          "special_builder": 19,
          "unknown": 0,
        },
      },
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 2,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 109,
          "inputCount": 294,
          "outputCount": 185,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 104,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 156,
          "inputCount": 185,
          "outputCount": 29,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "builders": {
            "change_point": {
              "output": 68,
            },
            "cliente_dormido": {
              "output": 1,
            },
            "cliente_perdido": {
              "output": 1,
            },
            "co_decline": {
              "output": 1,
            },
            "correlation": {
              "output": 0,
            },
            "cross_delta": {
              "discarded": 4509,
              "output": 75,
            },
            "inventory_stock": {
              "output": 2,
            },
            "meta_gap_aggregate_vendedor": {
              "output": 0,
            },
            "meta_gap_combo": {
              "output": 29,
            },
            "meta_gap_temporal": {
              "output": 2,
            },
            "migration": {
              "output": 0,
            },
            "outlier_builder": {
              "output": 4,
            },
            "product_dead": {
              "output": 1,
            },
            "steady_share": {
              "output": 4,
            },
          },
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 190,
          "reason": null,
          "status": "ok",
        },
      },
    },
    "poolAfterFilter": {
      "byDimension": {
        "categoria": 4,
        "cliente": 5,
        "departamento": 1,
        "producto": 4,
        "supervisor": 1,
        "vendedor": 5,
      },
      "byInsightType": {
        "cliente_dormido": 1,
        "cliente_perdido": 1,
        "co_decline": 1,
        "contribution": 1,
        "cross_delta": 1,
        "meta_gap": 8,
        "meta_gap_temporal": 2,
        "migration": 2,
        "product_dead": 1,
        "stock_excess": 1,
        "stock_risk": 1,
      },
      "bySeverity": {
        "ALTA": 3,
        "BAJA": 9,
        "MEDIA": 8,
      },
      "passRate": 0.8,
      "total": 20,
    },
    "poolReturnedByEngine": {
      "byDimension": {
        "categoria": 4,
        "cliente": 9,
        "departamento": 2,
        "producto": 4,
        "supervisor": 1,
        "vendedor": 5,
      },
      "byInsightType": {
        "change": 1,
        "cliente_dormido": 1,
        "cliente_perdido": 1,
        "co_decline": 1,
        "contribution": 1,
        "cross_delta": 2,
        "meta_gap": 8,
        "meta_gap_temporal": 2,
        "migration": 2,
        "outlier": 1,
        "product_dead": 1,
        "stock_excess": 1,
        "stock_risk": 1,
        "trend": 2,
      },
      "bySeverity": {
        "ALTA": 6,
        "BAJA": 9,
        "MEDIA": 10,
      },
      "total": 25,
    },
    "runtimeAudit": {
      "origins": {
        "cross_engine": 0,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 6,
        "special_builder": 19,
        "unknown": 0,
      },
      "portfolioPreview": [
        {
          "currentRank": 1,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
          "portfolioRank": 1,
          "portfolioScore": 0.626,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 2,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Luis Hernández",
          "portfolioRank": 9,
          "portfolioScore": 0.4,
          "reasons": [
            "economic_impact",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 3,
          "id": "special_builder:meta_gap:supervisor:cumplimiento_meta:Roberto Méndez",
          "portfolioRank": 13,
          "portfolioScore": 0.349,
          "reasons": [
            "economic_impact",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 4,
          "id": "special_builder:meta_gap:vendedor:cumplimiento_meta:Carlos Ramírez",
          "portfolioRank": 18,
          "portfolioScore": 0.328,
          "reasons": [
            "economic_impact",
            "high_confidence",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 5,
          "id": "special_builder:cliente_perdido:cliente:dias_sin_compra:Tienda El Progreso",
          "portfolioRank": 2,
          "portfolioScore": 0.502,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "high_confidence",
            "actionable",
            "causal_context",
          ],
        },
      ],
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 2,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 109,
          "inputCount": 294,
          "outputCount": 185,
          "reason": null,
          "status": "ok",
        },
        "executive_compression": {
          "discardedCount": null,
          "inputCount": 20,
          "outputCount": 0,
          "reason": null,
          "status": "skipped",
        },
        "gate": {
          "discardedCount": 5,
          "inputCount": 25,
          "outputCount": 20,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 104,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 156,
          "inputCount": 185,
          "outputCount": 29,
          "reason": null,
          "status": "ok",
        },
        "render_adapter": {
          "discardedCount": null,
          "inputCount": 20,
          "outputCount": 20,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "builders": {
            "change_point": {
              "output": 68,
            },
            "cliente_dormido": {
              "output": 1,
            },
            "cliente_perdido": {
              "output": 1,
            },
            "co_decline": {
              "output": 1,
            },
            "correlation": {
              "output": 0,
            },
            "cross_delta": {
              "discarded": 4509,
              "output": 75,
            },
            "inventory_stock": {
              "output": 2,
            },
            "meta_gap_aggregate_vendedor": {
              "output": 0,
            },
            "meta_gap_combo": {
              "output": 29,
            },
            "meta_gap_temporal": {
              "output": 2,
            },
            "migration": {
              "output": 0,
            },
            "outlier_builder": {
              "output": 4,
            },
            "product_dead": {
              "output": 1,
            },
            "steady_share": {
              "output": 4,
            },
          },
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 190,
          "reason": null,
          "status": "ok",
        },
      },
      "summary": {
        "candidatesFiltered": 20,
        "candidatesRejectedByGate": 5,
        "candidatesReturned": 25,
        "chains": 0,
        "diagnosticBlocks": 20,
        "enrichedBlocks": 20,
        "executiveProblems": 0,
        "legacyBlocks": 0,
        "residualCandidates": 20,
      },
    },
  },
}
`;

exports[`insight-engine golden master (demo dataset, USD) > produces stable structural output for demo dataset 1`] = `
{
  "rows": [
    {
      "dimensionId": "cliente",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 819,
      "insightTypeId": "cliente_perdido",
      "member": "Tienda El Progreso",
      "metricId": "dias_sin_compra",
      "rank": 1,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "ALTA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "cliente",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 1633,
      "insightTypeId": "cliente_dormido",
      "member": "Supermercado López",
      "metricId": "dias_sin_compra",
      "rank": 2,
      "root_problem_key": null,
      "scoreRounded": 0.75,
      "severity": "MEDIA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 28994,
      "insightTypeId": "meta_gap_temporal",
      "member": "Carlos Ramírez",
      "metricId": "cumplimiento_meta",
      "rank": 3,
      "root_problem_key": null,
      "scoreRounded": 0.2694,
      "severity": "BAJA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 16868,
      "insightTypeId": "meta_gap_temporal",
      "member": "Miguel Ángel Díaz",
      "metricId": "cumplimiento_meta",
      "rank": 4,
      "root_problem_key": null,
      "scoreRounded": 0.2119,
      "severity": "BAJA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "producto",
      "direction": "neutral",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 15842,
      "insightTypeId": "stock_excess",
      "member": "Cacahuates 100g",
      "metricId": "inventario",
      "rank": 5,
      "root_problem_key": null,
      "scoreRounded": 0.7,
      "severity": "MEDIA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 5708,
      "insightTypeId": "product_dead",
      "member": "Chicharrón 120g",
      "metricId": "venta",
      "rank": 6,
      "root_problem_key": null,
      "scoreRounded": 0.6,
      "severity": "MEDIA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 5708,
      "insightTypeId": "co_decline",
      "member": "Palomitas 80g",
      "metricId": "venta",
      "rank": 7,
      "root_problem_key": null,
      "scoreRounded": 0.1142,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "supervisor",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Patricia Ruiz",
      "metricId": "cumplimiento_meta",
      "rank": 8,
      "root_problem_key": null,
      "scoreRounded": 0.8528,
      "severity": "MEDIA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 25355,
      "insightTypeId": "stock_risk",
      "member": "Queso Fresco 400g",
      "metricId": "inventario",
      "rank": 9,
      "root_problem_key": null,
      "scoreRounded": 0.4,
      "severity": "BAJA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "supervisor",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Miguel Torres",
      "metricId": "cumplimiento_meta",
      "rank": 10,
      "root_problem_key": null,
      "scoreRounded": 0.8076,
      "severity": "MEDIA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Luis Hernández",
      "metricId": "cumplimiento_meta",
      "rank": 11,
      "root_problem_key": null,
      "scoreRounded": 0.9822,
      "severity": "MEDIA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "categoria",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Lácteos",
      "metricId": "cumplimiento_meta",
      "rank": 12,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "MEDIA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "categoria",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Limpieza",
      "metricId": "cumplimiento_meta",
      "rank": 13,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "MEDIA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "categoria",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Refrescos",
      "metricId": "cumplimiento_meta",
      "rank": 14,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "MEDIA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "María Castillo",
      "metricId": "cumplimiento_meta",
      "rank": 15,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "BAJA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Roberto Cruz",
      "metricId": "cumplimiento_meta",
      "rank": 16,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "BAJA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.54,
      "impactoValorRounded": 639,
      "insightTypeId": "migration",
      "member": "Super Económico",
      "metricId": "venta",
      "rank": 17,
      "root_problem_key": null,
      "scoreRounded": 0.2796,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "meta_gap",
      "member": "Patricia Vásquez",
      "metricId": "cumplimiento_meta",
      "rank": 18,
      "root_problem_key": null,
      "scoreRounded": 0.95,
      "severity": "BAJA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.69,
      "impactoValorRounded": 46,
      "insightTypeId": "migration",
      "member": "Tienda El Carmen",
      "metricId": "num_transacciones",
      "rank": 19,
      "root_problem_key": null,
      "scoreRounded": 0.2659,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "departamento",
      "direction": "neutral",
      "hasAction": false,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": null,
      "insightTypeId": "cross_delta",
      "member": "Santa Ana",
      "metricId": "venta",
      "rank": 20,
      "root_problem_key": null,
      "scoreRounded": 0.3807,
      "severity": "BAJA",
      "time_scope": "unknown",
    },
  ],
  "summary": {
    "datasetSize": {
      "inventory": 20,
      "metas": 2340,
      "sales": 94838,
    },
    "engineStatus": {
      "candidatesSelected": 26,
      "candidatesTotal": 315,
      "detectorsEmitted": {
        "change_point": 68,
        "correlation": 0,
        "meta_gap_temporal": 3,
        "motor1": 119,
        "outlier_builder": 4,
        "steady_share": 4,
        "z9_hydration": 29,
      },
      "origins": {
        "cross_engine": 2,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 110,
        "special_builder": 203,
        "unknown": 0,
      },
      "rankerAudit": {
        "portfolioPreview": [
          {
            "currentRank": 1,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
            "portfolioRank": 1,
            "portfolioScore": 0.573,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 2,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Miguel Ángel Díaz",
            "portfolioRank": 8,
            "portfolioScore": 0.439,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 3,
            "id": "special_builder:cliente_perdido:cliente:dias_sin_compra:Tienda El Progreso",
            "portfolioRank": 2,
            "portfolioScore": 0.512,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "high_confidence",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 4,
            "id": "special_builder:stock_excess:producto:inventario:Cacahuates 100g",
            "portfolioRank": 3,
            "portfolioScore": 0.484,
            "reasons": [
              "economic_impact",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 5,
            "id": "special_builder:product_dead:producto:venta:Chicharrón 120g",
            "portfolioRank": 4,
            "portfolioScore": 0.473,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "actionable",
              "causal_context",
            ],
          },
        ],
        "protectedCount": 23,
        "regularCap": 6,
        "regularCount": 170,
        "regularSelected": 6,
        "selectedByOrigin": {
          "cross_engine": 0,
          "executive_compression": 0,
          "legacy_render_adapter": 0,
          "motor1_legacy": 0,
          "motor2_registry_loop": 5,
          "special_builder": 21,
          "unknown": 0,
        },
      },
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 2,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 117,
          "inputCount": 315,
          "outputCount": 198,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 110,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 169,
          "inputCount": 198,
          "outputCount": 29,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "builders": {
            "change_point": {
              "output": 68,
            },
            "cliente_dormido": {
              "output": 1,
            },
            "cliente_perdido": {
              "output": 1,
            },
            "co_decline": {
              "output": 1,
            },
            "correlation": {
              "output": 0,
            },
            "cross_delta": {
              "discarded": 4509,
              "output": 75,
            },
            "inventory_stock": {
              "output": 2,
            },
            "meta_gap_aggregate_vendedor": {
              "output": 0,
            },
            "meta_gap_combo": {
              "output": 42,
            },
            "meta_gap_temporal": {
              "output": 3,
            },
            "migration": {
              "output": 1,
            },
            "outlier_builder": {
              "output": 4,
            },
            "product_dead": {
              "output": 1,
            },
            "steady_share": {
              "output": 4,
            },
          },
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 205,
          "reason": null,
          "status": "ok",
        },
      },
    },
    "poolAfterFilter": {
      "byDimension": {
        "categoria": 3,
        "cliente": 4,
        "departamento": 1,
        "producto": 4,
        "supervisor": 2,
        "vendedor": 6,
      },
      "byInsightType": {
        "cliente_dormido": 1,
        "cliente_perdido": 1,
        "co_decline": 1,
        "cross_delta": 1,
        "meta_gap": 9,
        "meta_gap_temporal": 2,
        "migration": 2,
        "product_dead": 1,
        "stock_excess": 1,
        "stock_risk": 1,
      },
      "bySeverity": {
        "ALTA": 1,
        "BAJA": 10,
        "MEDIA": 9,
      },
      "passRate": 0.769,
      "total": 20,
    },
    "poolReturnedByEngine": {
      "byDimension": {
        "canal": 1,
        "categoria": 4,
        "cliente": 7,
        "departamento": 2,
        "producto": 4,
        "supervisor": 2,
        "vendedor": 6,
      },
      "byInsightType": {
        "change": 1,
        "cliente_dormido": 1,
        "cliente_perdido": 1,
        "co_decline": 1,
        "contribution": 1,
        "cross_delta": 2,
        "meta_gap": 10,
        "meta_gap_temporal": 2,
        "migration": 2,
        "outlier": 1,
        "product_dead": 1,
        "stock_excess": 1,
        "stock_risk": 1,
        "trend": 1,
      },
      "bySeverity": {
        "ALTA": 3,
        "BAJA": 11,
        "CRITICA": 1,
        "MEDIA": 11,
      },
      "total": 26,
    },
    "runtimeAudit": {
      "origins": {
        "cross_engine": 0,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 5,
        "special_builder": 21,
        "unknown": 0,
      },
      "portfolioPreview": [
        {
          "currentRank": 1,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
          "portfolioRank": 1,
          "portfolioScore": 0.573,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 2,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Miguel Ángel Díaz",
          "portfolioRank": 8,
          "portfolioScore": 0.439,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 3,
          "id": "special_builder:cliente_perdido:cliente:dias_sin_compra:Tienda El Progreso",
          "portfolioRank": 2,
          "portfolioScore": 0.512,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "high_confidence",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 4,
          "id": "special_builder:stock_excess:producto:inventario:Cacahuates 100g",
          "portfolioRank": 3,
          "portfolioScore": 0.484,
          "reasons": [
            "economic_impact",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 5,
          "id": "special_builder:product_dead:producto:venta:Chicharrón 120g",
          "portfolioRank": 4,
          "portfolioScore": 0.473,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "actionable",
            "causal_context",
          ],
        },
      ],
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 2,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 117,
          "inputCount": 315,
          "outputCount": 198,
          "reason": null,
          "status": "ok",
        },
        "executive_compression": {
          "discardedCount": null,
          "inputCount": 20,
          "outputCount": 0,
          "reason": null,
          "status": "skipped",
        },
        "gate": {
          "discardedCount": 6,
          "inputCount": 26,
          "outputCount": 20,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 110,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 169,
          "inputCount": 198,
          "outputCount": 29,
          "reason": null,
          "status": "ok",
        },
        "render_adapter": {
          "discardedCount": null,
          "inputCount": 20,
          "outputCount": 20,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "builders": {
            "change_point": {
              "output": 68,
            },
            "cliente_dormido": {
              "output": 1,
            },
            "cliente_perdido": {
              "output": 1,
            },
            "co_decline": {
              "output": 1,
            },
            "correlation": {
              "output": 0,
            },
            "cross_delta": {
              "discarded": 4509,
              "output": 75,
            },
            "inventory_stock": {
              "output": 2,
            },
            "meta_gap_aggregate_vendedor": {
              "output": 0,
            },
            "meta_gap_combo": {
              "output": 42,
            },
            "meta_gap_temporal": {
              "output": 3,
            },
            "migration": {
              "output": 1,
            },
            "outlier_builder": {
              "output": 4,
            },
            "product_dead": {
              "output": 1,
            },
            "steady_share": {
              "output": 4,
            },
          },
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 205,
          "reason": null,
          "status": "ok",
        },
      },
      "summary": {
        "candidatesFiltered": 20,
        "candidatesRejectedByGate": 6,
        "candidatesReturned": 26,
        "chains": 0,
        "diagnosticBlocks": 20,
        "enrichedBlocks": 20,
        "executiveProblems": 0,
        "legacyBlocks": 0,
        "residualCandidates": 20,
      },
    },
  },
}
`;
